--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>gr.forth.ics.isl</groupId>
     <artifactId>x3ml-engine</artifactId>
     <packaging>jar</packaging>
-    <name>X3ML-Engine</name>
+    <name>X3ML-Engine_SmartUp</name>
     <version>1.9.5-SNAPSHOT</version>
     
     <inceptionYear>2013</inceptionYear>
